<resources>
    <string name="app_name">DogWalker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="txtH1">Passeio para o seu cachorro</string>
    <string name="txtTop">DogWalker</string>
    <string name="txtLocation">Av. Lins de Vasconcelos, 1222</string>
    <string name="txtAskLocation">Seu cão está neste endereço?</string>
    <string name="btnScheduleRide">Agendar Passeio</string>
</resources>
