<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
    tools:context=".MainActivity">

    <TextView android:text="@string/txtH1" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtH1"
        android:textColor="#0f0e0e"
        android:textSize="20sp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:contentDescription="img_dogwalker"
        android:src="@mipmap/img_dogwalker"
        android:minHeight="200dp"
        android:layout_below="@+id/txtH1"
        android:layout_alignLeft="@+id/txtH1"
        android:layout_alignStart="@+id/txtH1"
        android:layout_alignRight="@+id/txtH1"
        android:layout_alignEnd="@+id/txtH1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtTop"
        android:id="@+id/textView2"
        android:textColorHighlight="#010101"
        android:textColor="#070606"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:inputType="none"
        android:text="@string/txtLocation"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtAskLocation"
        android:id="@+id/textView3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnScheduleRide"
        android:id="@+id/button"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@mipmap/img_location"
        android:layout_below="@+id/textView3"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toStartOf="@+id/textView3" />

</RelativeLayout>
